--- a/index.html
+++ b/index.html
@@ -4,46 +4,164 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Guess</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        body {
+            background-image: url('Numbers BG 01.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            color: #ff7c7c;
+        }
+
+        .container {
+            margin-top: 50px;
+            background-color: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+        }
+
+        .card {
+            border-radius: 15px;
+            box-shadow: 0px 0px 10px rgba(255, 246, 246, 0.1);
+            background-image: url('NG.jpeg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            transition: box-shadow 0.3s ease-in-out;
+        }
+
+        .card:hover {
+            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        .card-title,
+        #result {
+            color: #000000;
+        }
+
+        #result {
+            margin-top: 20px;
+            font-size: 1.2rem;
+            font-weight: bold;
+        }
+
+        .success-animation {
+            animation: confetti 1s ease-in-out forwards;
+        }
+
+        @keyframes confetti {
+            0% {
+                transform: translateY(0);
+            }
+
+            50% {
+                transform: translateY(-20px) rotate(5deg);
+            }
+
+            100% {
+                transform: translateY(-200%) rotate(360deg);
+                opacity: 0;
+            }
+        }
+
+        .shake {
+            animation: shake 0.5s;
+        }
+
+        @keyframes shake {
+            0%, 100% {
+                transform: translateX(0);
+            }
+            25% {
+                transform: translateX(-5px);
+            }
+            50% {
+                transform: translateX(5px);
+            }
+            75% {
+                transform: translateX(-5px);
+            }
+        }
+    </style>
 </head>
+
 <body>
-    <div class="container text-center mt-2">
+    <div class="container text-center">
         <div class="alert alert-success" role="alert">
-            <h1 style="font-size: xx-large;"> Random Guess </h1>
-         </div>
-         <div class="d-flex justify-content-center">
-         <div class="card" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title">Input Your Number Between 1 to 100</h5>
-              <input type="number" id="user-input" class="form-control"> 
-              <button class="btn btn-success mt-2" id="submit" onclick="guess_num()">Submit Guess</button>
+            <h1 style="font-size: 2.5rem;">Random Guess</h1>
+        </div>
+        <div class="d-flex justify-content-center">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Input Your Number Between 1 to 100</h5>
+                    <input type="number" id="user-input" class="form-control">
+                    <button class="btn btn-success mt-2" id="submit" onclick="guess_num()">Submit Guess</button>
+                    <button class="btn btn-warning mt-2" id="reset" onclick="reset_game()" style="display: none;">Play Again</button>
+                    <p id="attempts" class="text-light">Attempts: 0</p>
+                </div>
+                <div id="result"></div>
             </div>
-            <div id="result"></div>
-          </div>
         </div>
     </div>
     <script>
-        let randomnumber = Math.floor(Math.random()*101)
-        function guess_num(){
-            let result = document.getElementById('result')
-            let submit = document.getElementById('submit')
-            const guess=Number(document.getElementById('user-input').value)
-            console.log(guess)
-            if(guess===randomnumber){
-                result.textContent='Success'
-                result.className="alert alert-success"
-                submit.disabled=true
-                console.log("Success")}
-            else if(guess < randomnumber){
-                result.textContent='Small'
-                result.className="alert alert-danger"
-                console.log("Small")}
-            else{
-                result.textContent='Large'
-                result.className="alert alert-danger"
-                console.log("Large")}
+        let randomnumber = Math.floor(Math.random() * 101);
+        let attempts = 0;
+
+        function guess_num() {
+            attempts++;
+            let result = document.getElementById('result');
+            let submit = document.getElementById('submit');
+            let userInput = document.getElementById('user-input');
+            const guess = Number(userInput.value);
+
+            document.getElementById('attempts').textContent = `Attempts: ${attempts}`;
+
+            if (guess < 1 || guess > 100) {
+                result.textContent = 'Please enter a number between 1 and 100';
+                result.className = "alert alert-warning";
+                userInput.classList.add('shake');
+                setTimeout(() => userInput.classList.remove('shake'), 500);
+                return;
+            }
+
+            if (guess === randomnumber) {
+                result.textContent = 'Success!';
+                result.className = "alert alert-success";
+                submit.disabled = true;
+                result.classList.add('success-animation');
+                document.getElementById('reset').style.display = 'block';
+            } else if (guess < randomnumber) {
+                result.textContent = 'Too Small!';
+                result.className = "alert alert-danger";
+            } else if (guess > randomnumber) {
+                result.textContent = 'Too Large!';
+                result.className = "alert alert-danger";
+            }
         }
-    </script> 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+        function reset_game() {
+            randomnumber = Math.floor(Math.random() * 101);
+            attempts = 0;
+            document.getElementById('result').textContent = '';
+            document.getElementById('user-input').value = '';
+            document.getElementById('submit').disabled = false;
+            document.getElementById('reset').style.display = 'none';
+            document.getElementById('attempts').textContent = 'Attempts: 0';
+            document.getElementById('result').classList.remove('success-animation');
+        }
+
+        function validate_input() {
+            const guess = Number(document.getElementById('user-input').value);
+            document.getElementById('submit').disabled = (guess < 1 || guess > 100);
+        }
+
+        document.getElementById('user-input').addEventListener('input', validate_input);
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
 </body>
 </html>
